# learn-py-gamedev

./: Makefile  README.md  game.toml  pyproject.toml
assets/: shadows.glsl  tiles.tsx
maps/: test.json  test3.json
src/: config.toml
src/game/: cli.py  config.py  game.py
