[project]
name = "game"
dynamic = ["version"]
dependencies = ["arcade"]

[project.optional-dependencies]
dev = ["pyinstaller"]

[project.scripts]
game = "game.cli:run"

[tool.setuptools.dynamic]
version = { attr = "game.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[build.system]
requires = ["setuptools>=65.5"]
build-backend = "setuptools.build_meta"
